--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts", 
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
