--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "qvapay-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
     "lint": "eslint . --ext .ts", 
-    "build": "tsc", 
-    "start": "node ./dist/index.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
