--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "grammy": "^1.17.2"
+    "grammy": "^1.17.2",
+    "express": "^4.18.2"
   }
 }
