--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
-    "lint": "eslint . --ext .ts", 
+    "lint": "eslint . --ext .ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -23,15 +23,14 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
-    "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "grammy": "^1.17.2",
     "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "grammy": "^1.17.2"
   }
 }
