--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "grammy": "^1.17.2"
+    "grammy": "^1.17.2",
+    "pg": "^8.11.3",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5"
   }
 }
