--- a/src/data/users.cfg
+++ b/src/data/users.cfg
@@ -1,1 +1,1 @@
-{"886235011":{"BANK_CUP":{"sell":250},"BANK_MLC":{"sell":"1.13"}}}
+{"886235011":{"BANK_CUP":{"sell":240},"BANK_MLC":{"sell":1.11}},"5590656257":{"BANK_CUP":{"sell":240},"BANK_MLC":{"sell":1.11}}}
