feat (indes.js): terminada la condiguracion para guardar la informacion de usuarios en la base de datos posgres utilizando sequelize

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,7 +108,7 @@
   }, 
   "include": [
     "src/**/*.ts"
-  ],
+, "src/database/database.js", "src/database/models/users.model.js", "src/database/models/umbrales.model.js"  ],
   "exclude": [
       "node_modules"
   ]
