--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "qvapay-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
     "lint": "eslint . --ext .ts",
     "build": "npm install",
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
