--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -28,6 +32,7 @@
     "express": "^4.18.2",
     "grammy": "^1.17.2",
     "pg": "^8.11.3",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5"
   }
 }
