--- a/package.json
+++ b/package.json
@@ -2,37 +2,24 @@
   "name": "qvapay-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
-    "lint": "eslint . --ext .ts",
-    "build": "npm install",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "eslint": "^8.47.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "dotenv": "^16.3.1"
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "grammy": "^1.17.2",
     "pg": "^8.11.3",
-    "sequelize": "^6.32.1",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize": "^6.32.1"
   }
 }
