--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon",
+    "dev": "nodemon -r dotenv/config src/index.js",
     "start": "node src/index.js"
   },
   "keywords": [],
